style.css
body {
  text-align: center;
  background-color: black;
  color: white;
}

#dropContainer {
  position: relative;
  display: flex;
  gap: 10px;
  /* flex-direction: column; */
  justify-content: center;
  align-items: center;
  height: 8vh;
  /* padding: 10px; */
  font-size: 20px;
  font-weight: bold;
  border-radius: 10px;
  border: 2px dashed #696969;
  color: green;
  cursor: pointer;
  transition: background .2s ease-in-out, border .2s ease-in-out, color .2s ease-in-out;
}

#dropContainer:hover {
  background: rgb(169, 169, 169);
  color: red;
  border-color: black;
}

#dropContainer:hover #dropTitle {
  color: black;
}

#dropTitle {
  color: white;
  font-size: 20px;
  font-weight: bold;
  text-align: center;
  transition: color .2s ease-in-out;
}

input[type=file] {
  width: 42.0em;
  max-width: 100%;
  color: black;
  font-weight: bold;
  padding: 5px;
  background: white;
  border-radius: 10px;
  border: 1px solid rgb(69, 0, 69);
}

input[type=file]::file-selector-button {
  margin-right: 10px;
  border: none;
  background: blue;
  padding: 10px 20px;
  border-radius: 10px;
  color: white;
  font-weight: bold;
  cursor: pointer;
  transition: background .2s ease-in-out;
}

input[type=file]::file-selector-button:hover {
  background: rgb(0, 69, 0);
}

#selectFile {
  position: relative;
  display: flex;
  width: auto;
  text-overflow: '';
  border-color: white;
  outline-color: white;
  font: inherit;
  padding: 5px;
  background: rgb(69, 0, 69);
  color: white;
  border-radius: 0.25em;
  box-shadow: 0 0 1em 0 rgba(0, 0, 0, 0.2);
  cursor: pointer;
  transition: background .2s ease-in-out, border .2s ease-in-out, color .2s ease-in-out;
  /* option {
    color: inherit;
  } */
}

#selectFile:hover {
  background: rgb(0, 69, 0);
}

tfoot input {
  background-color: black;
  color: white;
  width: 100%;
  padding: 4px;
  border-radius: 5px;
  box-sizing: border-box;
}

/* dataTables Search input box */
.dataTables_filter {
  position: relative;
}

.dataTables_filter input {
  width: 100%;
  /* height: 30px; */
  background: #000000;
  border: 1px solid white;
  border-radius: 10px;
  box-shadow: 0 0 3px #ffffff, 0 10px 15px #336633 inset;
  text-indent: 5px;
}

.fa-icon {
  color: white;
  position: absolute;
  top: 7px;
  right: 0;
}

